@@ -1,5 +1,11 @@
 2012-01-01 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Source/GNUmakefile:
+	* Headers/CoreFoundation/CFCharacterSet.h:
+	* Source/CFCharacterSet.c: CFCharacterSet skeleton.
+
+	2012-01-01 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/GSPrivate.h: New CAS atomic function.
 	* Source/CFRuntime.c: Make sure corebase is only initialized once.
 	* Source/GNUmakefile:
